fixing spacing on for profile photos properly...

--- a/public/stylesheets/backjam.css
+++ b/public/stylesheets/backjam.css
@@ -450,7 +450,8 @@ body {background: #2a2e2f url('/stylesheets/images/bg-body.gif') no-repeat cente
 
 			/* ---- =Profile ---- */
 			
-			body.profile #content .media h2 {float: none; margin: 0 0 0.5em 0;}
+			body.profile #content .media .item-details {margin: 0 0 0.5em 0;}
+			  body.profile #content .media h2 {float: none;}
 			body.profile #content .media p {line-height: 1.5; margin: 0;}
 			
      body.account #content {float: left; padding: 2em; width: 66em;}
